syntax= "proto3";
option java_multiple_files=true;
option java_package="com.atmosware.SuperOnline";

service ProductService {
  rpc DecreaseStockOfProduct (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  string packageNameofOrder = 1;

}

message ProductResponse {
  string message = 1;
  int32 stockNumberOfProduct = 2;
}